[package]
name = "rso4ts"
version = "0.1.0"
authors = ["cemondr <cemconder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rso4ts"
path = "src/lib.rs"

[dependencies]
rand = "0.6"
geo = "0.12.2"
ordered-float = "1.0.2"
plotters = "^0.2.12"
plotlib = "0.4.0"
